# OMax4

./: .gitignore  OMax-4.5.64.maxpat  OMax4-Groove.maxpat  OMax4.7 MIDIONLY.maxpat  OMax4.7-Groove.maxpat  OMax4.7.maxpat  README.md  Readme.txt  __ReadMe.rtf  link_vitesse.maxpat
Forum/: OMax4-Description.rtf
doc/: Doc.bib  Doc.tex  Externals.eps  Functions.eps  Modules.eps  Overall.eps  __ReadMe.rtf
misc/: Input.json  OMax-4.5.6.xml
patchers/: OMax.Audio-Input.maxpat  OMax.Audio-Monitor.maxpat  OMax.Audio-Output.Pan.st.maxpat  OMax.Buffer.st.maxpat  OMax.Impro-PickSimple.maxpat  OMax.ImproMIDI.maxpat  OMax.ImproOut-Play.st.maxpat  OMax.ImproPlayerA.maxpat  OMax.ImproPlayerA.st.maxpat  OMax.ImproPlayerAv.st.maxpat  OMax.ImproPlayerB.maxpat  OMax.ImproPlayerB.st.maxpat  OMax.ImproPlayerBv.st.maxpat  OMax.ImproPoly.maxpat  OMax.ImproSpectral.maxpat  OMax.MFCCs.maxpat  OMax.Multipitch.maxpat  OMax.Oracle-MIDI.maxpat  OMax.Oracle-POLY.maxpat  OMax.Oracle-SP.maxpat  OMax.PattrStorage.maxpat  OMax.SVP-Play.st.maxpat  OMax.SVP-Player.maxpat  OMax.SVP-Player.st.maxpat  OMax.SVP-Playerv.st.maxpat  OMax.SVP_groove-Playerv.st.maxpat  OMax.SVP_groove.Playv_n.maxpat  OMax.SaveLoad.maxpat  OMax.Time.maxpat  OMax.Visu-Display.maxpat  OMax.Visu-Selection.maxpat  OMax.Visu-Suffixes.maxpat  OMax.Visu-Timeline.maxpat  OMax.Visu-Waveform.st.maxpat  OMax.Yin+.maxpat  To_video.maxpat  To_video3.maxpat  bc.vufader.maxpat  crossfade~.maxpat  fr.maxpat  (+1 more)
patches/: OMax-4.5.3.maxpat  OMax-4.5.3.xml  OMax.Audio-Output.Pan.maxpat  OMax.Yin+.maxpat  (+9 more)
src/bc.externals/bc.yinstats/: CMakeLists.txt
(+1374 files in other folders)
